--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+	<link rel="preconnect" href="https://fonts.gstatic.com" />
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
   </head>
   <body>
